@@ -1,5 +1,6 @@
 Changes for 1.6.5
 
+ - [ZBX-856] fixed email sending if tcp packets from smtp server are segmented (Sasha)
  - [ZBX-855] fixed processing of eventlogs timestamps on server side (Sasha)
  - [ZBX-851] changed sorting of users  to alias in popup (Artem)
  - [ZBX-849] fixed permissions problem for users in dashboard (Artem)
